Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90665

RenderingMode changing does not work correctly

    XMLWordPrintable

Details

    • ad85513d4b38bdedac27a095bd3a988f1eda23a2 (qt/qtdatavis3d/dev) 40c40b8e133c4ee3feb199753c82d4b55a105c8e (qt/qtdatavis3d/6.1)

    Description

      Changing the renderingMode does not work.

      Also, in Qt 6 there is no way to not clear the window at all, so RenderDirectToBackground_NoClear mode has to be removed.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              oulu_hillbilly Sami Varanka
              tokorpip Tomi Korpipää
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes