examples/datavisualization/qmlmultigraph/qml/qmlmultigraph/main.qml
@@ -33,7 +33,7 @@ import QtQuick.Controls
 import QtDataVisualization 1.2
 import "."
 
-Rectangle {
+Item {
     id: mainView
     width: 800
     height: 600
@@ -58,6 +58,7 @@ Rectangle {
             Layout.fillWidth: true
             border.color: surfaceGraph.theme.gridLineColor
             border.width: 2
+            color: "#00000000"
 
             Surface3D {
                 id: surfaceGraph
@@ -134,6 +135,7 @@ Rectangle {
             Layout.fillWidth: true
             border.color: scatterGraph.theme.gridLineColor
             border.width: 2
+            color: "#00000000"
 
             Scatter3D {
                 id: scatterGraph
@@ -163,6 +165,7 @@ Rectangle {
             Layout.fillWidth: true
             border.color: barGraph.theme.gridLineColor
             border.width: 2
+            color: "#00000000"
 
             Bars3D {
                 id: barGraph
