tests/manual/qmldynamicdata/qml/qmldynamicdata/main.qml
@@ -32,7 +32,7 @@ import QtDataVisualization 1.2
 import QtQuick.Controls
 import "."
 
-Rectangle {
+Item {
     id: mainView
     width: 1280
     height: 720
